--- a/package.json
+++ b/package.json
@@ -1,12 +1,24 @@
 {
-  "name": "volunesia",
+  "name": "vms",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "chart.js": "^2.8.0",
+    "classnames": "^2.2.6",
+    "fullcalendar": "^4.0.0-alpha.2",
+    "grommet": "^2.6.5",
+    "polished": "^3.1.0",
+    "primeicons": "^1.0.0",
+    "primereact": "^3.1.0",
+    "quill": "^1.3.6",
     "react": "^16.8.4",
+    "react-bulma-components": "^2.3.0",
     "react-dom": "^16.8.4",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
-    "reactbulma": "^3.0.4"
+    "react-transition-group": "^2.5.1",
+    "reactbulma": "^3.0.4",
+    "styled-components": "^4.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
